# packages/api/internal/api/types.gen.go
@@ -78,6 +78,25 @@ type CreatedAccessToken struct {
 	Token string `json:"token"`
 }
 
+// CreatedSecret defines model for CreatedSecret.
+type CreatedSecret struct {
+	// CreatedAt When the secret was created
+	CreatedAt time.Time `json:"createdAt"`
+
+	// Hosts List of hosts where this secret can be used
+	Hosts []string `json:"hosts"`
+
+	// Id Identifier of the secret
+	Id   openapi_types.UUID       `json:"id"`
+	Mask IdentifierMaskingDetails `json:"mask"`
+
+	// Name Name of the secret
+	Name string `json:"name"`
+
+	// Value Raw value of the secret (only shown on creation)
+	Value string `json:"value"`
+}
+
 // CreatedTeamAPIKey defines model for CreatedTeamAPIKey.
 type CreatedTeamAPIKey struct {
 	// CreatedAt Timestamp of API key creation
@@ -96,25 +115,6 @@ type CreatedTeamAPIKey struct {
 
 	// Name Name of the API key
 	Name string `json:"name"`
-}
-
-// CreatedTeamSecret defines model for CreatedTeamSecret.
-type CreatedTeamSecret struct {
-	// CreatedAt When the secret was created
-	CreatedAt time.Time `json:"createdAt"`
-
-	// Hosts List of hosts where this secret can be used
-	Hosts []string `json:"hosts"`
-
-	// Id Identifier of the secret
-	Id   openapi_types.UUID       `json:"id"`
-	Mask IdentifierMaskingDetails `json:"mask"`
-
-	// Name Name of the secret
-	Name string `json:"name"`
-
-	// Value Raw value of the secret (only shown on creation)
-	Value string `json:"value"`
 }
 
 // DiskMetrics defines model for DiskMetrics.
@@ -239,14 +239,8 @@ type NewSandbox struct {
 	Timeout *int32 `json:"timeout,omitempty"`
 }
 
-// NewTeamAPIKey defines model for NewTeamAPIKey.
-type NewTeamAPIKey struct {
-	// Name Name of the API key
-	Name string `json:"name"`
-}
-
-// NewTeamSecret defines model for NewTeamSecret.
-type NewTeamSecret struct {
+// NewSecret defines model for NewSecret.
+type NewSecret struct {
 	// Hosts List of hosts where this secret can be used
 	Hosts []string `json:"hosts"`
 
@@ -255,6 +249,12 @@ type NewTeamSecret struct {
 
 	// Value Value of the secret
 	Value string `json:"value"`
+}
+
+// NewTeamAPIKey defines model for NewTeamAPIKey.
+type NewTeamAPIKey struct {
+	// Name Name of the API key
+	Name string `json:"name"`
 }
 
 // Node defines model for Node.
@@ -501,6 +501,22 @@ type SandboxesWithMetrics struct {
 	Sandboxes map[string]SandboxMetric `json:"sandboxes"`
 }
 
+// Secret defines model for Secret.
+type Secret struct {
+	// CreatedAt When the secret was created
+	CreatedAt time.Time `json:"createdAt"`
+
+	// Hosts List of hosts where this secret can be used
+	Hosts []string `json:"hosts"`
+
+	// Id Identifier of the secret
+	Id   openapi_types.UUID       `json:"id"`
+	Mask IdentifierMaskingDetails `json:"mask"`
+
+	// Name Name of the secret
+	Name string `json:"name"`
+}
+
 // Secrets defines model for Secrets.
 type Secrets map[string]string
 
@@ -546,22 +562,6 @@ type TeamMetric struct {
 
 	// Timestamp Timestamp of the metric entry
 	Timestamp time.Time `json:"timestamp"`
-}
-
-// TeamSecret defines model for TeamSecret.
-type TeamSecret struct {
-	// CreatedAt When the secret was created
-	CreatedAt time.Time `json:"createdAt"`
-
-	// Hosts List of hosts where this secret can be used
-	Hosts []string `json:"hosts"`
-
-	// Id Identifier of the secret
-	Id   openapi_types.UUID       `json:"id"`
-	Mask IdentifierMaskingDetails `json:"mask"`
-
-	// Name Name of the secret
-	Name string `json:"name"`
 }
 
 // TeamUser defines model for TeamUser.
@@ -877,7 +877,7 @@ type PostSandboxesSandboxIDResumeJSONRequestBody = ResumedSandbox
 type PostSandboxesSandboxIDTimeoutJSONRequestBody PostSandboxesSandboxIDTimeoutJSONBody
 
 // PostSecretsJSONRequestBody defines body for PostSecrets for application/json ContentType.
-type PostSecretsJSONRequestBody = NewTeamSecret
+type PostSecretsJSONRequestBody = NewSecret
 
 // PostTemplatesJSONRequestBody defines body for PostTemplates for application/json ContentType.
 type PostTemplatesJSONRequestBody = TemplateBuildRequest
