# packages/shared/pkg/models/secret/secret.go
@@ -1,6 +1,6 @@
 // Code generated by ent, DO NOT EDIT.
 
-package teamsecret
+package secret
 
 import (
 	"time"
@@ -10,8 +10,8 @@ import (
 )
 
 const (
-	// Label holds the string label denoting the teamsecret type in the database.
-	Label = "team_secret"
+	// Label holds the string label denoting the secret type in the database.
+	Label = "secret"
 	// FieldID holds the string denoting the id field in the database.
 	FieldID = "id"
 	// FieldSecretPrefix holds the string denoting the secret_prefix field in the database.
@@ -34,10 +34,10 @@ const (
 	FieldHosts = "hosts"
 	// EdgeTeam holds the string denoting the team edge name in mutations.
 	EdgeTeam = "team"
-	// Table holds the table name of the teamsecret in the database.
-	Table = "team_secrets"
+	// Table holds the table name of the secret in the database.
+	Table = "secrets"
 	// TeamTable is the table that holds the team relation/edge.
-	TeamTable = "team_secrets"
+	TeamTable = "secrets"
 	// TeamInverseTable is the table name for the Team entity.
 	// It exists in this package in order to avoid circular dependency with the "team" package.
 	TeamInverseTable = "teams"
@@ -45,7 +45,7 @@ const (
 	TeamColumn = "team_id"
 )
 
-// Columns holds all SQL columns for teamsecret fields.
+// Columns holds all SQL columns for secret fields.
 var Columns = []string{
 	FieldID,
 	FieldSecretPrefix,
@@ -76,7 +76,7 @@ var (
 	DefaultName string
 )
 
-// OrderOption defines the ordering options for the TeamSecret queries.
+// OrderOption defines the ordering options for the Secret queries.
 type OrderOption func(*sql.Selector)
 
 // ByID orders the results by the id field.
