# packages/shared/pkg/models/team/team.go
@@ -34,8 +34,8 @@ const (
 	EdgeUsers = "users"
 	// EdgeTeamAPIKeys holds the string denoting the team_api_keys edge name in mutations.
 	EdgeTeamAPIKeys = "team_api_keys"
-	// EdgeTeamSecrets holds the string denoting the team_secrets edge name in mutations.
-	EdgeTeamSecrets = "team_secrets"
+	// EdgeSecrets holds the string denoting the secrets edge name in mutations.
+	EdgeSecrets = "secrets"
 	// EdgeTeamTier holds the string denoting the team_tier edge name in mutations.
 	EdgeTeamTier = "team_tier"
 	// EdgeEnvs holds the string denoting the envs edge name in mutations.
@@ -56,13 +56,13 @@ const (
 	TeamAPIKeysInverseTable = "team_api_keys"
 	// TeamAPIKeysColumn is the table column denoting the team_api_keys relation/edge.
 	TeamAPIKeysColumn = "team_id"
-	// TeamSecretsTable is the table that holds the team_secrets relation/edge.
-	TeamSecretsTable = "team_secrets"
-	// TeamSecretsInverseTable is the table name for the TeamSecret entity.
-	// It exists in this package in order to avoid circular dependency with the "teamsecret" package.
-	TeamSecretsInverseTable = "team_secrets"
-	// TeamSecretsColumn is the table column denoting the team_secrets relation/edge.
-	TeamSecretsColumn = "team_id"
+	// SecretsTable is the table that holds the secrets relation/edge.
+	SecretsTable = "secrets"
+	// SecretsInverseTable is the table name for the Secret entity.
+	// It exists in this package in order to avoid circular dependency with the "secret" package.
+	SecretsInverseTable = "secrets"
+	// SecretsColumn is the table column denoting the secrets relation/edge.
+	SecretsColumn = "team_id"
 	// TeamTierTable is the table that holds the team_tier relation/edge.
 	TeamTierTable = "teams"
 	// TeamTierInverseTable is the table name for the Tier entity.
@@ -198,17 +198,17 @@ func ByTeamAPIKeys(term sql.OrderTerm, terms ...sql.OrderTerm) OrderOption {
 	}
 }
 
-// ByTeamSecretsCount orders the results by team_secrets count.
-func ByTeamSecretsCount(opts ...sql.OrderTermOption) OrderOption {
+// BySecretsCount orders the results by secrets count.
+func BySecretsCount(opts ...sql.OrderTermOption) OrderOption {
 	return func(s *sql.Selector) {
-		sqlgraph.OrderByNeighborsCount(s, newTeamSecretsStep(), opts...)
+		sqlgraph.OrderByNeighborsCount(s, newSecretsStep(), opts...)
 	}
 }
 
-// ByTeamSecrets orders the results by team_secrets terms.
-func ByTeamSecrets(term sql.OrderTerm, terms ...sql.OrderTerm) OrderOption {
+// BySecrets orders the results by secrets terms.
+func BySecrets(term sql.OrderTerm, terms ...sql.OrderTerm) OrderOption {
 	return func(s *sql.Selector) {
-		sqlgraph.OrderByNeighborTerms(s, newTeamSecretsStep(), append([]sql.OrderTerm{term}, terms...)...)
+		sqlgraph.OrderByNeighborTerms(s, newSecretsStep(), append([]sql.OrderTerm{term}, terms...)...)
 	}
 }
 
@@ -260,11 +260,11 @@ func newTeamAPIKeysStep() *sqlgraph.Step {
 		sqlgraph.Edge(sqlgraph.O2M, false, TeamAPIKeysTable, TeamAPIKeysColumn),
 	)
 }
-func newTeamSecretsStep() *sqlgraph.Step {
+func newSecretsStep() *sqlgraph.Step {
 	return sqlgraph.NewStep(
 		sqlgraph.From(Table, FieldID),
-		sqlgraph.To(TeamSecretsInverseTable, FieldID),
-		sqlgraph.Edge(sqlgraph.O2M, false, TeamSecretsTable, TeamSecretsColumn),
+		sqlgraph.To(SecretsInverseTable, FieldID),
+		sqlgraph.Edge(sqlgraph.O2M, false, SecretsTable, SecretsColumn),
 	)
 }
 func newTeamTierStep() *sqlgraph.Step {
